--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         </div>
       </div>
     </div>
-    <video src="/assets/assets_games.mp4" type="video/mp4" playsinline class="games-video" autoplay loop
+    <video src="/assets/assets_games.mp4" type="video/mp4" muted class="games-video" autoplay loop
       style="width: 100%;"></video>
     <div class="d-flex align-items-center justify-content-center"><button
         class="btn btn-primary text-light mt-2 rounded-5">Explore all games&nbsp;<i
