--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
       <button class="btn btn-primary text-light h-10 rounded-5">Explore games</button>
     </div>
     <div class="b2">
-      <video src="/assets/vid1.mp4" type="video/mp4" playsinline class="b2-video" autoplay loop></video>
+      <video src="/assets/vid1.mp4" type="video/mp4" muted class="b2-video" autoplay loop></video>
     </div>
   </div>
   <!-- gamelist -->
