--- a/index.html
+++ b/index.html
@@ -332,49 +332,51 @@
     </div>
   </div>
   <!-- gamelist -->
-  <div class="heading-1" id="web-games">
-    <h1 class="text-center">Discover all the trending games on Gloud PC</h1>
-    <p class="text-center text-secondary">They can run on our virtual machines</p><br><br>
-    <div class="games d-flex align-items-center justify-content-center">
-      <div class="cardx ms-3" style="width: 28rem;">
-        <img src="/assets/black-myth-wukong-video-u3zky.jpg" class="card-img-top" alt="games" id="img-card">
-        <div class="cardx-body">
-          <h4 class="cardx-text text-light">Black Myth: Wukong</h4>
-          <p class="cardx-text" id="rating">Rating :&nbsp;4.9</p>
-          <p class="cardx-text" style="text-align: justify;">Black Myth: Wukong is an action RPG rooted in Chinese
-            mythology. You shall set out as the Destined One to venture into the challenges and marvels ahead, to
-            uncover the obscured truth beneath the veil of a glorious legend from the past.</p>
+ <div class="container-fluid">
+    <div class="heading-1" id="web-games">
+      <h1 class="text-center">Discover all the trending games on Gloud PC</h1>
+      <p class="text-center text-secondary">They can run on our virtual machines</p><br><br>
+      <div class="games d-flex align-items-center justify-content-center">
+        <div class="cardx ms-3" style="width: 28rem;">
+          <img src="/assets/black-myth-wukong-video-u3zky.jpg" class="card-img-top" alt="games" id="img-card">
+          <div class="cardx-body">
+            <h4 class="cardx-text text-light">Black Myth: Wukong</h4>
+            <p class="cardx-text" id="rating">Rating :&nbsp;4.9</p>
+            <p class="cardx-text" style="text-align: justify;">Black Myth: Wukong is an action RPG rooted in Chinese
+              mythology. You shall set out as the Destined One to venture into the challenges and marvels ahead, to
+              uncover the obscured truth beneath the veil of a glorious legend from the past.</p>
+          </div>
+        </div>
+        <div class="cardx" style="width: 28rem;">
+          <img src="/assets/egs-deadisland2-deepsilverdambusterstudios-s1-2560x1440-a6dd204e3cd6.jpg" class="card-img-top"
+            alt="games" id="img-card">
+          <div class="cardx-body">
+            <h4 class="cardx-text text-light">Dead Island 2</h4>
+            <p class="cardx-text" id="rating">Rating :&nbsp;4.5</p>
+            <p class="cardx-text" style="text-align: justify;">A deadly virus is spreading across Los Angeles, turning
+              inhabitants into zombies. Bitten, infected, but more than just immune, uncover the truth behind the outbreak
+              and discover who -or what- you are.A chthonic rhythm calls from beyond, turning festival goers into ravenous
+              zombies.</p>
+          </div>
+        </div>
+        <div class="cardx" style="width: 28rem;">
+          <img src="/assets/egs-theoutlasttrials-redbarrels-s1-2560x1440-173911495.jpg" class="card-img-top" alt="games" id="img-card">
+          <div class="cardx-body">
+            <h4 class="cardx-text text-light">The Outlast Trials</h4>
+            <p class="cardx-text" id="rating">Rating :&nbsp;4.7</p>
+            <p class="cardx-text" style="text-align: justify;">Red Barrels invites you to experience mind-numbing terror,
+              this time with friends. Whether you go through the trials alone or in teams, if you survive long enough and
+              complete the therapy, Murkoff will happily let you leave… but will you be the same?</p>
+          </div>
         </div>
       </div>
-      <div class="cardx" style="width: 28rem;">
-        <img src="/assets/egs-deadisland2-deepsilverdambusterstudios-s1-2560x1440-a6dd204e3cd6.jpg" class="card-img-top"
-          alt="games" id="img-card">
-        <div class="cardx-body">
-          <h4 class="cardx-text text-light">Dead Island 2</h4>
-          <p class="cardx-text" id="rating">Rating :&nbsp;4.5</p>
-          <p class="cardx-text" style="text-align: justify;">A deadly virus is spreading across Los Angeles, turning
-            inhabitants into zombies. Bitten, infected, but more than just immune, uncover the truth behind the outbreak
-            and discover who -or what- you are.A chthonic rhythm calls from beyond, turning festival goers into ravenous
-            zombies.</p>
-        </div>
-      </div>
-      <div class="cardx" style="width: 28rem;">
-        <img src="/assets/egs-theoutlasttrials-redbarrels-s1-2560x1440-173911495.jpg" class="card-img-top" alt="games" id="img-card">
-        <div class="cardx-body">
-          <h4 class="cardx-text text-light">The Outlast Trials</h4>
-          <p class="cardx-text" id="rating">Rating :&nbsp;4.7</p>
-          <p class="cardx-text" style="text-align: justify;">Red Barrels invites you to experience mind-numbing terror,
-            this time with friends. Whether you go through the trials alone or in teams, if you survive long enough and
-            complete the therapy, Murkoff will happily let you leave… but will you be the same?</p>
-        </div>
-      </div>
+      <video src="/assets/assets_games.mp4" type="video/mp4" muted class="games-video" autoplay loop
+        style="width: 100%;"></video>
+      <div class="d-flex align-items-center justify-content-center"><button
+          class="btn btn-primary text-light mt-2 rounded-5">Explore all games&nbsp;<i
+            class="uil uil-arrow-right"></i></button></div>
     </div>
-    <video src="/assets/assets_games.mp4" type="video/mp4" muted class="games-video" autoplay loop
-      style="width: 100%;"></video>
-    <div class="d-flex align-items-center justify-content-center"><button
-        class="btn btn-primary text-light mt-2 rounded-5">Explore all games&nbsp;<i
-          class="uil uil-arrow-right"></i></button></div>
-  </div>
+ </div>
   <!-- Plans -->
   <div class="container-fluid">
     <h1 class="text-center p-5">How to play your games in a few clicks</h1>
